--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   <title>Document</title>
 </head>
 <title>task list</title>
+  <style>
+  header {
+  width: 9em;
+  height: 2.5em;
+  position: absolute;
+  border-radius: 5%;
+  }
+</style>
 <header class="bg-warning">
   <a href="#" class='dark' id='black'>
     <img src="https://img.icons8.com/material/24/000000/star-crescent.png"/>
