--- a/index.html
+++ b/index.html
@@ -4,20 +4,66 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="/index.css">
   <script src="index.js" defer></script>
   <title>Document</title>
 </head>
 <title>task list</title>
-  <style>
+<style>
   header {
   width: 9em;
   height: 2.5em;
   position: absolute;
   border-radius: 5%;
-  }
+  background: #05F2AE;
+}
+
+.bg {
+  background-color: rgba(128, 128, 128, 0.5);
+}
+
+.dark {
+  position: absolute;
+  margin-left: 60px;
+  margin-top: 0.3em;
+}
+
+.white {
+  position: absolute;
+  margin-left: 100px;
+  margin-top: 0.3em;
+}
+
+.desc-1 {
+  overflow-x: hidden;
+ }
+
+.desc-2 {
+ word-wrap: break-word;
+}
+
+.rightBar {
+  background: #05F2AE;
+  width: 9em;
+  height: 2.5em;
+  position: absolute;
+  border-radius: 5%;
+  right: 0em;
+}
+
+.trash {
+  position: absolute;
+  right: 60px;
+  padding-top: 5px;
+}
+
+.reset {
+  position: absolute;
+  right: 105px;
+  padding-top: 5px;
+}
 </style>
-<header class="bg-warning">
+<header>
   <a href="#" class='dark' id='black'>
     <img src="https://img.icons8.com/material/24/000000/star-crescent.png"/>
   </a>
@@ -25,6 +71,14 @@
     <img src="https://img.icons8.com/material/24/000000/sun--v1.png"/>
   </a>
 </header>
+<div class="rightBar">
+  <a href="#" id="trash" class="trash">
+    <img src="https://img.icons8.com/material/24/000000/delete-forever--v1.png"/>
+  </a> 
+  <div href="#" id="reset" class="reset" >
+    <img src="https://img.icons8.com/material-rounded/24/000000/replace.png"/>
+  </div>
+</div>
 <body class="bg-light">
   <div class="app"></div>
 </body>
